인덱스 마크업 구조 설계

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cafe W 메인</title>
-  <link rel="stylesheet" href="./scss/style.scss" />
+  <link rel="stylesheet" href="./sass/style.scss" />
  </head>
  <body>
-    <h1>cafeW 리뉴얼 프로젝트!</h1>
+    <div class="body-container">
+        <div class="layout-full header-container">
+            <div class="layout-width">
+                <header class="header">헤더</header>
+            </div>
+        </div>
+        <div class="layout-full navigation-container">
+            <div class="layout-width">
+                <nav class="navigation">내비게이션</nav>
+            </div>
+        </div>
+        <div class="layout-full main-container">
+            <main class="main">
+                <div class="layout-full season-container">
+                    <div class="layout-width">
+                        <section class="season">시즌음료</section>
+                    </div>
+                </div>
+                <div class="layout-full notice-container">
+                    <div class="layout-width">
+                        <section class="notice">공지사항</section>
+                    </div>
+                </div>
+            </main>
+        </div>
+        <div class="layout-full footer-container">
+            <div class="layout-width">
+                <footer class="footer">푸터</footer>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
