리져브 디자인 완성

--- a/src/index.html
+++ b/src/index.html
@@ -163,6 +163,56 @@
                         </section>
                     </div>
                 </div>
+                <div class="layout-full reserve-container">
+                    <div class="layout-width">
+                      <section class="reserve">
+                        <h2 class="reserve__title">cafe w . RESERVE</h2>
+                        <p class="reserve__subtitle">a delicate fragrance</p>
+                        <p class="reserve__description">입 안 가득 퍼지는 산뜻하고 따뜻한 봄의 향기</p>
+                        <a href="#" class="reserve__more button-stroke">자세히 보기</a>
+                        <div class="reserve__bg-container">
+                          <svg aria-hidden="true" width="70" height="95" viewBox="0 0 70 95" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M35 0L39.2658 13.1287H53.0701L41.9022 21.2426L46.1679 34.3713L35 26.2574L23.8321 34.3713L28.0978 21.2426L16.9299 13.1287H30.7342L35 0Z" fill="#A37356"/>
+                            <line x1="1" y1="51" x2="69" y2="51" stroke="#A37356" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M20.3601 67.2248H15L26.9133 94.9456L34.929 77.4976L42.8163 94.9999L55 67.2248L49.6543 67.2347L42.8835 83.1177L34.9052 66.1741L26.9949 83.1177L20.3601 67.2248Z" fill="#A37356"/>
+                          </svg>              
+                        </div>
+                      </section>
+                    </div>
+                  </div>
+                <div class="layout-full pick-container">
+                    <div class="layout-width">
+                      <section class="pick">
+                        <h2 class="pick__title">
+                          <span class="line-break pick--large">pick</span>
+                          <span class="line-break pick--medium">your</span>
+                          <span class="line-break pick--small">favorite</span>
+                        </h2>
+                        <p class="pick__description">
+                          <span class="line-break">다양한 메뉴를</span>
+                          <span class="line-break">카페 W에서 즐겨보세요</span>
+                        </p>
+                        <ul class="pick__good-list" aria-labelledby="카페 W만의 차별화 된 서비스">
+                          <li class="pick__good-item">카페 W만의 특별함을 경험할 수 있는 최상의 선택 음료 카페</li>
+                          <li class="pick__good-item">W 커피와 완벽한 어울림을 자랑하는 푸드</li>
+                          <li class="pick__good-item">사용한 시도와 디자인으로 가치를 더하는 상품</li>
+                          <li class="pick__good-item">소중한 사람에게 마음을 전하는 가장 좋은 방법. 카페 W 카드</li>
+                        </ul>
+                        <a href="#" class="pick__more button-stroke">자세히 보기</a>
+                        <div class="pick__photo-container">
+                          <figure class="pick__photo-image photo1">
+                            <img src="./images/photo01.jpg" alt="">
+                          </figure>
+                          <figure class="pick__photo-image photo2">
+                            <img src="./images/photo02.jpg" alt="">
+                          </figure>
+                          <figure class="pick__photo-image photo3">
+                            <img src="./images/photo03.jpg" alt="">
+                          </figure>
+                        </div>
+                      </section>
+                    </div>
+                </div>
             </main>
         </div>
         <div class="layout-full footer-container">
