pick 액션 디자인 완성

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
                           <span class="line-break">다양한 메뉴를</span>
                           <span class="line-break">카페 W에서 즐겨보세요</span>
                         </p>
-                        <ul class="pick__good-list" aria-labelledby="카페 W만의 차별화 된 서비스">
+                        <ul class="pick__good-list" aria-label="카페 W만의 차별화 된 서비스">
                           <li class="pick__good-item">카페 W만의 특별함을 경험할 수 있는 최상의 선택 음료 카페</li>
                           <li class="pick__good-item">W 커피와 완벽한 어울림을 자랑하는 푸드</li>
                           <li class="pick__good-item">사용한 시도와 디자인으로 가치를 더하는 상품</li>
@@ -200,15 +200,15 @@
                         </ul>
                         <a href="#" class="pick__more button-stroke">자세히 보기</a>
                         <div class="pick__photo-container">
-                          <figure class="pick__photo-image photo1">
+                          <div class="pick__photo-image photo1">
                             <img src="./images/photo01.jpg" alt="">
-                          </figure>
-                          <figure class="pick__photo-image photo2">
+                          </div>
+                          <div class="pick__photo-image photo2">
                             <img src="./images/photo02.jpg" alt="">
-                          </figure>
-                          <figure class="pick__photo-image photo3">
+                          </div>
+                          <div class="pick__photo-image photo3">
                             <img src="./images/photo03.jpg" alt="">
-                          </figure>
+                          </div>
                         </div>
                       </section>
                     </div>
