coffee-lab 액션 디자인 완성

--- a/src/index.html
+++ b/src/index.html
@@ -213,6 +213,28 @@
                       </section>
                     </div>
                 </div>
+                <div class="layout-full coffee-lab-container">
+                    <div class="layout-width">
+                      <section class="coffee-lab">
+                        <h2 class="coffee-lab__title">
+                          <span class="coffee-lab--thin">Cafe W </span>
+                          <span class="coffee-lab--bold">COFFEE LAB</span>
+                        </h2>
+                        <p class="coffee-lab__description">
+                          <span>최고의 커피를 향한 끊임없는 노력, </span>
+                          <span class="coffee-lab--bold">카페 W 커피연구소</span>
+                        </p>
+                        <ul class="coffee-lab__lab-list">
+                          <li class="coffee-lab__lab-item menu">
+                            <a href="#">lab menu</a>
+                          </li>
+                          <li class="coffee-lab__lab-item brista">
+                            <a href="#">lab barista</a>
+                          </li>
+                        </ul>
+                      </section>
+                    </div>
+                  </div>
             </main>
         </div>
         <div class="layout-full footer-container">
